# agentic-compiler

./: .gitignore  DEVELOPER.md  README.md  __main__.py  agent.py  pyproject.toml
.github/workflows/: ci.yml
agentic_compiler/: __init__.py  codegen.py  core.py
docs/ra/: round-1.md  round-10.md  round-2.md  round-3.md  round-4.md  round-5.md  round-6.md  round-7.md  round-8.md  round-9.md
scripts/: run-ra.py
tests/: test_agentic_compiler_docs.py  test_core.py
